# ipc-shared_memory-example

./: .gitignore  CMakeLists.txt  README.md
c/: CMakeLists.txt
c/src/: clear_all.c  periodic_sender.c  receiver.c  sender.c  shared_memory.h
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/ipc_example/lib/ipc_example/: ipc_node
ros2_ws/install/ipc_example/share/ament_index/resource_index/parent_prefix_path/: ipc_example
ros2_ws/install/ipc_example/share/ipc_example/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/install/ipc_example/share/ipc_example/cmake/: ipc_exampleConfig.cmake
ros2_ws/src/ipc_example/src/: ipc.cpp
ros_humble_docker/: Dockerfile  obu-ros-driver-docker.sh  ros_entrypoint.sh
ros_humble_docker/ros2_ws/src/ipc_example/include/ipc_example/: ipc.hpp
ros_humble_docker/ros2_ws/src/ipc_example/src/: ipc.cpp
src/: receiver.c  sender.c
